<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/resume_buy_banner"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:background="@android:color/holo_orange_dark"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/resume_buy_text_congratulation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/resume_buy_text_congratulation"
      android:textColor="@color/white"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@id/resume_buy_banner"
      app:layout_constraintEnd_toEndOf="@id/resume_buy_banner"
      app:layout_constraintStart_toStartOf="@id/resume_buy_banner"
      app:layout_constraintTop_toTopOf="@id/resume_buy_banner"
      app:layout_constraintVertical_bias="0.0" />

    <TextView
      android:id="@+id/resume_buy_text_success"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:text="@string/resume_buy_text_success"
      android:textColor="@color/white"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@id/resume_buy_text_congratulation"
      app:layout_constraintStart_toStartOf="@id/resume_buy_text_congratulation"
      app:layout_constraintTop_toBottomOf="@id/resume_buy_text_congratulation" />

    <TextView
      android:id="@+id/resume_buy_text_confirm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/resume_buy_text_text_confirm"
      app:layout_constraintEnd_toEndOf="@id/resume_buy_text_congratulation"
      app:layout_constraintStart_toStartOf="@id/resume_buy_text_congratulation"
      app:layout_constraintTop_toBottomOf="@id/resume_buy_banner" />

    <ImageView
      android:id="@+id/resume_buy_image"
      android:layout_width="wrap_content"
      android:layout_height="150dp"
      android:layout_marginTop="16dp"
      android:contentDescription="@string/resume_buy_image_description"
      android:scaleType="centerCrop"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/resume_buy_text_confirm"
      tools:srcCompat="@sample/pacotes.json/pacotes/imagem" />

    <TextView
      android:id="@+id/resume_buy_text_city"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/resume_buy_image"
      tools:text="@sample/pacotes.json/pacotes/local" />

    <TextView
      android:id="@+id/resume_buy_text_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="@id/resume_buy_text_city"
      app:layout_constraintTop_toBottomOf="@id/resume_buy_text_city"
      tools:text="03/12 - 02/01/2023" />

    <TextView
      android:id="@+id/resume_buy_text_price"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="@id/resume_buy_text_city"
      app:layout_constraintTop_toBottomOf="@id/resume_buy_text_date"
      tools:text="@sample/pacotes.json/pacotes/preco" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
